--- a/chat.html
+++ b/chat.html
@@ -293,6 +293,25 @@
                 height: -webkit-fill-available;
             }
         }
+
+        /* Add this to your existing CSS */
+        /* Add this to your existing CSS */
+@media (max-width: 480px) {
+  .chat-options {
+    display: flex !important;  /* Force display on smaller screens */
+    width: 100% !important;
+    padding: 0.5rem !important;
+    flex-direction: column !important;
+  }
+  
+  .option-btn {
+    width: 100% !important;
+    margin: 5px 0 !important;
+    white-space: normal !important;
+    height: auto !important;
+    min-height: 44px !important; /* Larger touch target */
+  }
+}
     </style>
 </head>
 <body style="background: #ff69b4;">
