--- a/chat.html
+++ b/chat.html
@@ -394,8 +394,11 @@
             .chat-options {
                 padding: 1rem;
                 max-height: 30vh;
+                margin-bottom: env(safe-area-inset-bottom, 0);
+                bottom: 10px;
+                position: relative;
             }
-
+            
             .option-btn {
                 padding: 12px 20px;
                 font-size: 1rem;
@@ -600,4 +603,3 @@
     <script src="chat.js"></script>
 </body>
 </html>
-
